--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 DE SAVOIR OU VONT PLUS PRECISEMENT LES MODIFS DE CHACUN-->
     <nav>
         <h1>Le caillou</h1>
-        <img class="burger-menu" src="https://img.icons8.com/cotton/64/000000/menu.png">
+        <img class="burger-menu" alt="burger-menu" src="https://img.icons8.com/cotton/64/000000/menu.png">
         <div>(logo a creer)</div>
         <div class="all-link">
             <ul>
@@ -32,11 +32,23 @@ DE SAVOIR OU VONT PLUS PRECISEMENT LES MODIFS DE CHACUN-->
         <section id="contact-us"></section>
     </section>
     <footer>
-        <ul>
-            <li>Presentation</li>
-            <li>Nous contacter</li>
-            <li>Recrutement</li>
-        </ul>
+        <div class="container evenly">
+            <img class="logo insta" alt="logo insta"
+                src="https://i.pinimg.com/originals/a7/2b/b5/a72bb5bf31303bd5f2fcf20c95603150.png">
+            <img class="logo facebook" alt="logo facebook"
+                src="https://www.stickpng.com/assets/images/58e91965eb97430e819064f5.png">
+            <img class="logo tweeter" alt="logo tweeter" src=" http://pngimg.com/uploads/twitter/twitter_PNG34.png">
+        </div>
+        <div class="container between">
+            <div class="">
+                <p>LE CAILLOU-Esplanade Linnée</p>
+                <p>33000 BORDEAUX</p>
+            </div>
+            <div class="">
+                <p>lecaillourestaurant@bonnesoiree.fr</p>
+                <p>05.56.17.69.64</p>
+            </div>
+        </div>
     </footer>
 </body>
 
