nav mobile sans burger

--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Le caillou</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>Présentation</li>
+          <li>Menu</li>
+          <li>Concerts à venir</li>
+          <li>Réserver une Table</li>
+          <li>Contactez nous</li>
+        </ul>
+      </nav>
+    </header>
 
     <!--AJOUTER DES COMMENTAIRES POUR SEPARER LES DIFFERENTES SECTIONS ET FACILITER A GIT HUB 
 DE SAVOIR OU VONT PLUS PRECISEMENT LES MODIFS DE CHACUN-->
-    <nav>
-        <h1>Le caillou</h1>
-        <img class="burger-menu" src="https://img.icons8.com/cotton/64/000000/menu.png">
-        <div>(logo a creer)</div>
-        <div class="all-link">
-            <ul>
-                <li>Menu</li>
-                <li>Prochains concerts</li>
-                <li>Reserver une table</li>
-            </ul>
-        </div>
-    </nav>
+
     <section id="introducion"></section>
     <section id="menu">
-        <section id="show"></section>
-        <section id="booking"></section>
-        <section id="contact-us"></section>
+      <section id="show"></section>
+      <section id="booking"></section>
+      <section id="contact-us"></section>
     </section>
     <footer>
-        <ul>
-            <li>Presentation</li>
-            <li>Nous contacter</li>
-            <li>Recrutement</li>
-        </ul>
+      <ul>
+        <li>Presentation</li>
+        <li>Nous contacter</li>
+        <li>Recrutement</li>
+      </ul>
     </footer>
-</body>
-
+  </body>
 </html>
