--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <header>
         <nav>
             <ul>
-                <li>Présentation</li>
-                <li>Menu</li>
-                <li>Concerts à venir</li>
-                <li>Réserver une Table</li>
-                <li>Contactez nous</li>
+                <li><a name="Nos menus presque gastros" href="#Menus">La carte</a></li>
+                <li><a name="Nos prochains concerts" href="#Concerts">Concerts à venir</a></li>
+                <li><a name="Faire une réservation" href="#Reserve">Réserver une Table</a></li>
+                <li><a name="Formulaire de contact" href="#Contact">Contactez-nous</a></li>
             </ul>
         </nav>
     </header>
