--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
             <a name="Nos menus presque gastros" href="#Menus">La carte</a>
           </li>
           <li>
-            <a name="Nos prochains concerts" href="#Concerts"
-              >Concerts à venir</a
-            >
+            <a name="Nos prochains concerts" href="#Concerts">Concerts à venir</a>
           </li>
           <li>
-            <a name="Faire une réservation" href="#Reserve"
-              >Réserver une Table</a
-            >
+            <a name="Faire une réservation" href="#Reserve">Réserver une Table</a>
           </li>
           <li>
             <a name="Formulaire de contact" href="#Contact">Contactez-nous</a>
