--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
 			<p>Venez manger ou siroter un verre ....</p>
 		</section>
 		<section class="transition">
-			<img src="pictures/music.png" class="transitionpicture">
+			<div class="transitionBackground">
+				<img src="noteGold.png" class="transitionpicture">
+			</div>
 			<div>
+				<hr>
 				<h1>Menu</h1>
 
 			</div>
@@ -48,27 +51,32 @@
 		</section>
 		<section class="menu part">
 			<img src="pictures/restaurantPicture.jpg" class="picture">
-			<h1>Notre carte</h1>
-			<div class="menu_container">
-				<div class="menu_card">
-					<h2>Viandard</h2>
-					<p>Entrées:</p>
-					<p>Plats:</p>
-					<p>Dessert: </p>
+			<div class="menu_main">
+				<h1>Notre carte</h1>
+				<div class="menu_container">
+					<div class="menu_card">
+						<h2>Viandard</h2>
+						<p>Entrées:</p>
+						<p>Plats:</p>
+						<p>Dessert: </p>
+					</div>
+					<div class="menu_card"> 
+						<h2>Vegan</h2>
+						<p>Entrées:</p>
+						<p>Plats:</p>
+						<p>Dessert: </p>
+					</div>
 				</div>
-				<div class="menu_card"> 
-					<h2>Vegan</h2>
-					<p>Entrées:</p>
-					<p>Plats:</p>
-					<p>Dessert: </p>
-				</div>
-			</div>
+			</div>	
 			<br>
 			<button type="submit">Réserver une table</button>
 		</section>
 		<section class="transition">
-			<img src="pictures/music.png" class="transitionpicture">
+			<div class="transitionBackground">
+				<img src="noteGold.png" class="transitionpicture">
+			</div>
 			<div>
+				<hr>
 				<h1>Concerts à venir</h1>
 			</div>
 		</section>
@@ -83,8 +91,11 @@
 			</div>
 		</section>
 		<section class="transition">
-			<img src="pictures/music.png" class="transitionpicture">
+			<div class="transitionBackground">
+				<img src="noteGold.png" class="transitionpicture">
+			</div>
 			<div>
+				<hr>
 				<h1>Réservation</h1>
 			</div>
 			<!--<i class="fas fa-utensils"></i> -->
@@ -113,10 +124,13 @@
 			</form>
 		</section>
 		<section class="transition">
+			<div class="transitionBackground">
+				<img src="noteGold.png" class="transitionpicture">
+			</div>
 			<div>
+				<hr>
 				<h1>Nous contacter</h1>
 			</div>
-			<img src="pictures/music.png" class="transitionpicture">
 		</section>
 		<section class="contact part">
 			<p>Vous souhaitez vous produire dans notre établissement, rejoindre notre équipe ou simplement nous envoyer un message, contactez-nous via le formulaire ci-dessous en sélectionnant l'objet de votre message.</p>
