--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
 	<main>
 		<section class="banner">
-			<h1>
+			<h1 class="main_title">
 				Bar &<br>
 				Restaurant<br>
 				Jazz<br>
@@ -57,7 +57,7 @@
 				<img src="noteGold.png" class="transitionpicture"
 				alt="notes de musiques">
 			</div>
-			<div>
+			<div class="transition_title">
 				<hr>
 				<h1>Menu</h1>
 
@@ -83,10 +83,10 @@
 						<p>Plats:</p>
 						<p>Dessert: </p>
 					</div>
-				</div>
+					<br>
+				</div>				
+				<button type="submit">Réserver une table</button>
 			</div>	
-			<br>
-			<button type="submit">Réserver une table</button>
 		</section>
 		<section class="transition">
 			<div class="transitionBackground">
@@ -94,13 +94,15 @@
 					class="transitionpicture"
 					alt="notes de musiques">
 			</div>
-			<div>
+			<div class="transition_title">
 				<hr>
 				<h1>Concerts à venir</h1>
 			</div>
 		</section>
 		<section class="shows part">
 			<h1>Prochain évènement : </h1>
+			<br>
+			<br>
 			<div class="containt_artist">
 				<div class="artist_card">
 					<h2>Armstrong's daughters</h2>
@@ -117,7 +119,7 @@
 					class="transitionpicture"
 					alt="notes de musique">
 			</div>
-			<div>
+			<div class="transition_title">
 				<hr>
 				<h1>Réservation</h1>
 			</div>
@@ -152,7 +154,7 @@
 					class="transitionpicture"
 					alt="notes de musique">
 			</div>
-			<div>
+			<div class="transition_title">
 				<hr>
 				<h1>Nous contacter</h1>
 			</div>
@@ -174,7 +176,7 @@
 					<input type="checkbox" name="message" value="3">
 				</p>
 			</form> -->
-        <form>
+        <form class="options_form">
           <p>
             <label for="object">
               <span>Objet du message:</span>
