--- a/index.html
+++ b/index.html
@@ -12,24 +12,48 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
+
+
+<!--
+
+  <div class="topnav">
+	<a href="#home" class="active">Logo</a>
+	<div id="myLinks">
+	  <a href="#news">News</a>
+	  <a href="#contact">Contact</a>
+	  <a href="#about">About</a>
+	</div>
+	<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+	  <i class="fa fa-bars"></i>
+	</a>
+  </div>
+
+-->
+
+
+
+
   <body>
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a name="Nos menus presque gastros" href="#Menus">La carte</a>
-          </li>
-          <li>
-            <a name="Nos prochains concerts" href="#Concerts">Concerts à venir</a>
-          </li>
-          <li>
-            <a name="Faire une réservation" href="#Reserve">Réserver une Table</a>
-          </li>
-          <li>
-            <a name="Formulaire de contact" href="#Contact">Contactez-nous</a>
-          </li>
-        </ul>
-      </nav>
+		<div class="burgerMenu">
+			<img class="burger" onclick="menuPop();" src="https://i.pinimg.com/originals/c4/70/7a/c4707a8305cf5dc79ce41458fa96854f.png">
+			<nav id="navMenu">
+				<ul id="myLinks">
+					<li>
+						<a title="Nos menus presque gastros" href="#Menus">La carte</a>
+					</li>
+					<li>
+						<a title="Nos prochains concerts" href="#Concerts">Concerts à venir</a>
+					</li>
+					<li>
+						<a title="Faire une réservation" href="#Reserve">Réserver une Table</a>
+					</li>
+					<li>
+						<a title="Formulaire de contact" href="#Contact">Contactez-nous</a>
+					</li>
+				</ul>
+			</nav>
+	</div>
     </header>
 	<main>
 		<section class="banner">
@@ -249,6 +273,7 @@
           <p class="right">05.56.17.69.64</p>
         </div>
       </div>
-    </footer>
+	</footer>
+	<script type="text/javascript" src="index.js"></script>
   </body>
 </html>
