refacto du projet

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 
-
 <body>
 	<header>
 		<div class="burgerMenu">
-			<img class="burger" onclick="menuPop();"
+			<img class="burger" alt="logo burger" onclick="menuPop();"
 				src="https://i.pinimg.com/originals/c4/70/7a/c4707a8305cf5dc79ce41458fa96854f.png">
 			<nav id="navMenu">
 				<ul id="myLinks">
@@ -43,7 +42,6 @@
 				Concerts <br>
 				Jazz<br>
 			</h1>
-
 		</section>
 		<img src="pictures/logo_square.png" class="logo" alt="logo saxophone sur assiette">
 		<section class="introduction">
@@ -52,16 +50,14 @@
 				organise régulièrement des concerts de Jazz. </p>
 			<p>Venez manger ou siroter un verre ....</p>
 		</section>
-		<section class="transition">
+		<section id="Menus" class="transition">
 			<div class="transitionBackground">
 				<img src="noteGold.png" class="transitionpicture" alt="notes de musiques">
 			</div>
 			<div class="transition_title">
 				<hr>
-				<h1 id="Menus" class="titlebig">Menu</h1>
-
+				<h1 class="titlebig">Menu</h1>
 			</div>
-			<!--<i class="fas fa-utensils"></i> -->
 		</section>
 		<section class="menu part">
 			<img src="pictures/restaurantPicture.jpg" class="picture_mobile picture_desktop" alt="photo du restaurant">
@@ -82,7 +78,7 @@
 						<h2 class="colored_font">Vegan</h2>
 						<p>12€</p>
 						<br>
-						<p class="colored_font">Plats:</p> 
+						<p class="colored_font">Plats:</p>
 						<p>Wok Végan Nouilles sautées</p>
 						<br>
 						<p class="colored_font">Dessert:</p>
@@ -94,8 +90,8 @@
 			</div>
 		</section>
 		<section class="transition">
-			<div class="transitionBackground">
-				<img src="noteGold.png" class="transitionpicture" alt="notes de musiques">
+			<div id="Concerts" class="transitionBackground">
+				<img src="pictures/noteGold.png" class="transitionpicture" alt="notes de musiques">
 			</div>
 			<div class="transition_title">
 				<hr>
@@ -103,24 +99,24 @@
 			</div>
 		</section>
 		<section class="shows part">
-			<h1 id="Concerts">Prochain évènement : </h1>
+			<h1>Prochain évènement : </h1>
 			<br>
 			<br>
 			<div class="containt_artist">
 				<h2 class="colored_font">Armstrong's daughters</h2>
 				<img src="pictures/bannerPicture.jpg" class="groupe_picture picture_mobile " alt="groupe de jazz">
-				<p>Nous avons le plaisir de recevoir ce groupe composé de 4 femmes passionnées de Jazz. Elles ont créé leur groupe il y a déjà 6 ans et repasse pour la deuxième fois sur notre scène.</p>
+				<p>Nous avons le plaisir de recevoir ce groupe composé de 4 femmes passionnées de Jazz. Elles ont créé
+					leur groupe il y a déjà 6 ans et repasse pour la deuxième fois sur notre scène.</p>
 			</div>
 		</section>
-		<section class="transition">
+		<section id="Reserve" class="transition">
 			<div class="transitionBackground">
-				<img src="noteGold.png" class="transitionpicture" alt="notes de musique">
+				<img src="pictures/noteGold.png" class="transitionpicture" alt="notes de musique">
 			</div>
 			<div class="transition_title">
 				<hr>
-				<h1 id="Reserve" class="titlebig">Réservation</h1>
+				<h1 class="titlebig">Réservation</h1>
 			</div>
-			<!--<i class="fas fa-utensils"></i> -->
 		</section>
 		<section class="booking part">
 			<form class="booking_form">
@@ -147,33 +143,18 @@
 					délais.</span>
 			</form>
 		</section>
-		<section class="transition">
+		<section id="Contact" class="transition">
 			<div class="transitionBackground">
-				<img src="noteGold.png" class="transitionpicture" alt="notes de musique">
+				<img src="pictures/noteGold.png" class="transitionpicture" alt="notes de musique">
 			</div>
 			<div class="transition_title">
 				<hr>
-				<h1 id="Contact" class="titlebig">Nous contacter</h1>
+				<h1 class="titlebig">Nous contacter</h1>
 			</div>
 		</section>
 		<section class="contact part">
 			<p>Vous souhaitez vous produire dans notre établissement, rejoindre notre équipe ou simplement nous envoyer
 				un message, contactez-nous via le formulaire ci-dessous en sélectionnant l'objet de votre message.</p>
-			<!--<form>
-				<h2>Objet du message:</h2>
-				<p>
-					<label for="artists">Se produire sur la scène du caillou</label>
-					<input type="checkbox" name="artists" value="1">
-				</p>
-				<p>
-					<label for="recrut">Rejoindre l'équipe</label>
-					<input type="checkbox" name="recrut" value="2">
-				</p>
-				<p>
-					<label for="message">Envoyer un message</label>
-					<input type="checkbox" name="message" value="3">
-				</p>
-			</form> -->
 			<form class="options_form">
 				<p>
 					<label for="object">
