correction des liens vers dossier pictures

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</section>
 		<section id="Menus" class="transition">
 			<div class="transitionBackground">
-				<img src="noteGold.png" class="transitionpicture" alt="notes de musiques">
+				<img src="pictures/noteGold.png" class="transitionpicture" alt="notes de musiques">
 			</div>
 			<div class="transition_title">
 				<hr>
