--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</div>
 			<div class="transition_title">
 				<hr>
-				<h1 id="Menus" class="titlebig">Menu</h1>
+				<h1 id="Menus" class="titlebig">Nos Menus</h1>
 
 			</div>
 			<!--<i class="fas fa-utensils"></i> -->
@@ -65,14 +65,13 @@
 		<section class="menu part">
 			<img src="pictures/restaurantPicture.jpg" class="picture_mobile picture_desktop" alt="photo du restaurant">
 			<div class="menu_main">
-				<h1>Notre carte</h1>
 				<div class="menu_container">
 					<div class="menu_card">
 						<h2 class="colored_font">Viandard</h2>
 						<p>17€</p>
 						<br>
 						<p class="colored_font">Plats:</p>
-						<p>Magret de canard au fruits rouges</p>
+						<p>Magret de canard aux fruits rouges</p>
 						<br>
 						<p class="colored_font">Dessert: </p>
 						<p>Pudding à la mangue</p>
@@ -89,7 +88,7 @@
 					</div>
 					<br>
 				</div>				
-				<button type="submit">Réserver une table</button>
+				<a href="#Reserve" class="button_links"><button type="submit"> Réserver une table </button></a>
 			</div>	
 		</section>
 		<section class="transition">
@@ -106,9 +105,9 @@
 			<br>
 			<br>
 			<div class="containt_artist">
-				<h2 class="colored_font">Armstrong's daughters</h2>
-				<img src="pictures/bannerPicture.jpg" class="groupe_picture picture_mobile " alt="groupe de jazz">
-				<p>Nous avons le plaisir de recevoir ce groupe composé de 4 femmes passionnées de Jazz. Elles ont créé leur groupe il y a déjà 6 ans et repasse pour la deuxième fois sur notre scène.</p>
+				<h2 class="colored_font">Armstrong's sisters</h2>
+				<img src="https://www.francetvinfo.fr/image/75n7mf8sm-a8ec/1200/450/19010279.jpg" class="groupe_picture picture_mobile " alt="groupe de jazz">
+				<p>Nous avons le plaisir de recevoir ce groupe composé de 8 nonnes passionnées de Jazz. Elles ont créé leur groupe il y a déjà 6 ans et repasse pour la deuxième fois sur notre scène.</p>
 			</div>
 		</section>
 		<section class="transition">
@@ -140,7 +139,7 @@
 						bébé, ou autre...)<abbr title="required">*</abbr></label>
 					<textarea id="message" name="message"></textarea>
 				</div>
-				<button type="submit">Envoyer une demande de réservation</button>
+				<button type="submit" onclick="Message_send()">Envoyer une demande de réservation</button>
 				<br>
 				<span>Compte tenu des nombreuses demandes nous vous confirmerons votre réservation dans les meilleurs
 					délais.</span>
@@ -211,7 +210,7 @@
           <div class="form_items">
             <textarea id="sendMessage" name="message"></textarea>
           </div>
-          <button type="submit">Envoyer votre message</button>
+          <button type="submit" onclick="Message_send()">Envoyer votre message</button>
         </form>
       </section>
     </main>
