--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class="transition_title">
 				<hr>
-				<h1 class="titlebig">Menu</h1>
+				<h1 class="titlebig">Menus</h1>
 			</div>
 		</section>
 		<section class="menu part">
@@ -98,11 +98,11 @@
 			</div>
 		</section>
 		<section class="shows part">
-			<h1>Prochain évènement : </h1>
+			<h1 class="fontSize">Prochain évènement : </h1>
 			<br>
 			<br>
 			<div class="containt_artist">
-				<h2 class="colored_font">Armstrong's sisters</h2>
+				<h2 class="fontSize colored_font ">Armstrong's sisters</h2>
 				<img src="https://www.francetvinfo.fr/image/75n7mf8sm-a8ec/1200/450/19010279.jpg"
 					class="groupe_picture picture_mobile " alt="groupe de jazz">
 				<p>Nous avons le plaisir de recevoir ce groupe composé de 8 nonnes passionnées de Jazz. Elles ont créé
