--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <header>
 		<div class="burgerMenu">
-			<img class="burger" onclick="menuPop();" src="https://i.pinimg.com/originals/c4/70/7a/c4707a8305cf5dc79ce41458fa96854f.png">
+			<img class="burger" onclick="menuPop();" src="https://media.giphy.com/media/I2T0zE0lS5WqQ/giphy.gif">
 			<nav id="navMenu">
-				<ul id="myLinks">
+				<ul>
 					<li>
 						<a title="Nos menus presque gastros" href="#Menus">La carte</a>
 					</li>
