correction des derniers bugs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 	<header>
 		<div class="burgerMenu">
-			<img class="burger" alt="logo burger" onclick="menuPop();" src="https://media.giphy.com/media/I2T0zE0lS5WqQ/giphy.gif">
+			<img class="burger" alt="logo burger" onclick="menuPop();"
+				src="https://media.giphy.com/media/I2T0zE0lS5WqQ/giphy.gif">
 			<nav id="navMenu">
 				<ul>
 					<li>
@@ -132,8 +133,8 @@
 					<input id="date" type="date" name="date">
 				</div>
 				<div class="form_items">
-					<label for="message"> Laissez ici votre message (nombre de personnes, d'enfants, si besoin de siège
-						bébé, ou autre...)<abbr title="required">*</abbr></label>
+					<label for="message"> Laissez ici votre message nombre de personnes, d'enfants, si besoin de siège
+						bébé, ou autre...<abbr title="required">*</abbr></label>
 					<textarea id="message" name="message"></textarea>
 				</div>
 				<button type="submit" onclick="Message_send()">Envoyer une demande de réservation</button>
@@ -179,13 +180,12 @@
 				</div>
 				<div class="form_items">
 					<label for="message">
-						Laissez ici votre message (nombre de personnes, d'enfants, si
-						besoin de siège bébé, ou autre...)<abbr title="required">*</abbr></label>
+						Laissez ici votre message</label>
 				</div>
 				<div class="form_items">
 					<textarea id="sendMessage" name="message"></textarea>
 				</div>
-				<button type="submit" onclick="Message_send()">Envoyer votre message</button>
+				<button type="submit" onclick="Message_send_two()">Envoyer votre message</button>
 			</form>
 		</section>
 	</main>
